--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     margin:0;
-    background:#cceedd;
+    background:#ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,9 +14,9 @@ body {
 #board {
 margin:10px;
 position: relative;
-width:90vmin;
-height:90vmin;
-background: rgb(49, 49, 49);
+width:75vmin;
+height:75vmin;
+background: #fdefd6;
 display: grid;
 grid-template-columns: repeat(var(--numberSquaresY),1fr);
 grid-template-rows: repeat(var(--numberSquaresX),1fr);
@@ -25,7 +25,7 @@ padding:2px;
 }
 
 .square {
-background:rgb(150, 150, 150);
+background:#bfe5e5;
 width:100%;
 height:100%;
 cursor: pointer;
@@ -33,20 +33,22 @@ display: flex;
 color:honeydew;
 font-family: 'Courier New', Courier, monospace;
 font-weight: 700;
-font-size: 3vmin;
+font-size: 2.5vmin;
 align-items: center;
 justify-content: center;
-
+transition: 0.15s;
 }
 
 .square:hover {
-    background: chocolate;
+    background: #fbc4b4;
+transition: 0.1s;
 }
 
 
 .adjecent {
 
-    background:green;
+    background:#f37663;
+transition: 0.1s;
 
 }
 .active {
@@ -55,11 +57,13 @@ justify-content: center;
 
 .flagged {
 
-    background: khaki;
+    background: #fdefd6;
+transition: 0.1s;
     
 }
 
 .flagged::after{
+    font-size: 2vmin;
     content:"🚩"
 }
 
@@ -68,14 +72,18 @@ height:25vmin;
 width:80vmin;
 position: absolute;
 z-index:10;
-background:lightcoral;
+background:#fbc4b4;
 display: flex;
 align-items: center;
 justify-content: center;
 font-family: 'Courier New', Courier, monospace;
 font-size: 2.5vmin;
 font-weight: 700;
-box-shadow: 0 0 0 1vmin black;
+box-shadow: 0 0 0 1vmin #f37663;
 cursor: pointer;
 user-select: none;
+color:white;
+border-radius: 10vmin;
+text-shadow: -1px -2px rgb(162, 253, 253), 2px 2px rgb(255, 148, 255);
+text-shadow: -1px -2px #d7dbd1, 2px 2px #fdb1d2;
 }
